[workspace]
members = ["zenoh-plugin-mavlink", "zenoh-bridge-mavlink"]
resolver = "2"

[workspace.package]
authors = ["Roberto Petrisoru <roby2x14@gmail.com>"]
edition = "2021"
license = ""
homepage = ""
repository = "https://github.com/roby2014/zenoh-plugin-mavlink"
version = "1.0.0-dev"

[workspace.dependencies]
async-liveliness-monitor = "0.1.1"
futures = "0.3.26"
clap = "4.4.11"
serde = "1.0.154"
serde_json = "1.0.114"
mavlink = { git = "https://github.com/roby2014/rust-mavlink", branch = "async_serial", features = [
    "tokio-1",
] }
chrono = { version = "0.4.38", default-features = false }
git-version = "0.3.5"
tokio = { version = "1.35.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1.40"
lazy_static = "1.4.0"
zenoh = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "internal",
  "internal_config",
  "unstable",
  "plugins",
] }
zenoh-config = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-ext = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "unstable",
] }
zenoh-plugin-rest = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features=["static_plugin"]}
zenoh-plugin-trait = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-plugin-mavlink = { version = "1.0.0-dev", path = "zenoh-plugin-mavlink/", default-features = false }
