[package]
name = "zenoh-bridge-mavlink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
zenoh = { workspace = true }
zenoh-plugin-trait = { workspace = true }
zenoh-util = { workspace = true }
zenoh-plugin-mavlink = { workspace = true, default-features = false }
zenoh-plugin-rest = { version = "0.11.0", default-features = false }
serde_json = { workspace = true }
clap = "4.5.4"
