[package]
name = "zenoh-bridge-mavlink"
version = "0.1.0"
edition = "2021"

[dependencies]
async-liveliness-monitor  = { workspace = true }
futures  = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
zenoh = { workspace = true }
zenoh-config = { workspace = true }
zenoh-plugin-rest = { workspace = true }
zenoh-plugin-trait = { workspace = true }
zenoh-plugin-mavlink = { workspace = true }

[[bin]]
name = "zenoh-bridge-mavlink"
path = "src/main.rs"
