[package]
name = "zenoh-plugin-mavlink"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = ["network-programming", "science::robotics", "aerospace::drones"]
description = "Zenoh plugin for MAVLink"

[lib]
name = "zenoh_plugin_mavlink"
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
lazy_static = {workspace = true}
mavlink = { workspace = true }
git-version = { workspace = true }
chrono = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
zenoh-plugin-trait = { workspace = true }